Fix for move button jumping around on scroll. Improving ROI workflow. Informative messages for ROI workflow.

--- a/frontend/src/components/App.css
+++ b/frontend/src/components/App.css
@@ -48,5 +48,5 @@ body {
     z-index: 999;
     position: fixed;
     bottom: 10px;
-    right: 30px;
+    right: 10px;
 }
